Added EquityStyle and FixedIncomeStyle converters to XRay US. (#120)
* Initial USConnector and PerformanceConnector setup.

* Added types and created basic request for Performance connector.

* Adjusted naming and minor improvements

* Added langcult param and minor improvements.

* Added XRayUS connector with basic test, demo and converters structure.

* Add hasMultiple support to XRay US.

* Added requested changes, improved docs and TS.

* Lowercase.

* Request Americas API from tests.

* Change test function name.

* Requested changes.

* Extracted load method to PAUSConnector.

* Added docs for performance connector.

* Added placeholder TestConverter for Performance connector.

* Added requested changes.

* Extracted URL to property.

* Requested changes.

* Extracted langcult to PAUSConnector level.

* Added EquityStyle connector to XRay US.

* Create separate folder for US converters.

* Added FixedIncomeStyle connector to XRay US.

* Add missing columns to tests, add converter to docs.

* Tests fix.

* Add unclassified handler.

* Add missing continue.

* Add connectors repo demo.

* Tooltip pointFormat fix.

* Improved converters.

* Fix tests, change demo title.

* Add individual portfolio values support.

* Fix tests.

* Refactor to use more type safe approach.

* Add SecurityReference to metadata.

* Removed generic from the interface name.

---------

Co-authored-by: Mateusz Bernacik <mat.bernacik@gmail.com>
Co-authored-by: Paweł Fus <pawel.fus.88@gmail.com>

--- a/demos/core-us-investment-style/demo.html
+++ b/demos/core-us-investment-style/demo.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="UTF-8" />
         <script src="https://code.highcharts.com/stock/highstock.js"></script>
+        <script src="https://code.highcharts.com/modules/heatmap.js"></script>
         <script src="https://code.highcharts.com/connectors/morningstar/connectors-morningstar.js"></script>
-        <title>XRay US Connector</title>
+        <title>Highcharts Core + Morningstar US Investment Style</title>
         <style>
             body {
                 font-family: sans-serif;
@@ -18,13 +19,13 @@
         </style>
     </head>
     <body>
-        <h1>XRay US Connector</h1>
+        <h1>Highcharts Core + Morningstar US Investment Style</h1>
         <p id="postman-message">
             Add your Postman environment file from Morningstar to start the demo:
             <input type="file" id="postman-json" accept=".json,application/json" />
         </p>
         <p id="loading-label">Loading data…</p>
-        <div id="container"></div>
+        <div id="container" style="max-width: 420px; margin: 0 auto;"></div>
         <script type="module" src="./demo.js"></script>
     </body>
 </html>
