--- a/demos/core-us-investment-style/demo.html
+++ b/demos/core-us-investment-style/demo.html
@@ -4,8 +4,7 @@
         <meta charset="UTF-8" />
         <script src="https://code.highcharts.com/stock/highstock.js"></script>
         <script src="https://code.highcharts.com/modules/heatmap.js"></script>
-        <!-- <script src="https://code.highcharts.com/connectors/morningstar/connectors-morningstar.js"></script> -->
-        <script src="../../code/connectors-morningstar.src.js"></script>
+        <script src="https://code.highcharts.com/connectors/morningstar/connectors-morningstar.js"></script>
         <title>Highcharts Core + Morningstar US Investment Style</title>
         <style>
             body {
