Added Trailing Returns Converter.

--- a/demos/index.html
+++ b/demos/index.html
@@ -162,6 +162,12 @@
                                 <img src="assets/chevron.svg" alt="Logo" class="logo" />
                             </button>
                         </li>
+                        <li>
+                            <button onclick="selectDemo('core-us-trailing-returns/demo.html', this)">
+                                Highcharts Core + Morningstar US Trailing Returns
+                                <img src="assets/chevron.svg" alt="Logo" class="logo" />
+                            </button>
+                        </li>
                     </ul>
                 </div>
                 <div class="sidebar-footer">
