Added HypoPerformance Connector (#122)
* Initial USConnector and PerformanceConnector setup.

* Added types and created basic request for Performance connector.

* Adjusted naming and minor improvements

* Added langcult param and minor improvements.

* Requested changes.

* Extracted load method to PAUSConnector.

* Added docs for performance connector.

* Added placeholder TestConverter for Performance connector.

* Extracted URL to property.

* Requested changes.

* Extracted langcult to PAUSConnector level.

* Added HypoPerformanceConnector.

* Added docs.

* Removed configId from PAUS and added to XrayUS and Perf.

* Formatting, typos, docs.

* Removed configId to a lower hierarchy.

* Added Hypo and Perf to connector list in docs.

---------

Co-authored-by: Mateusz Bernacik <mat.bernacik@gmail.com>
Co-authored-by: Kamil Musiałowski <kamil.musialowski@blacklabel.net>
Co-authored-by: Paweł Fus <pawel.fus.88@gmail.com>

--- a/demos/index.html
+++ b/demos/index.html
@@ -157,6 +157,12 @@
                             </button>
                         </li>
                         <li>
+                            <button onclick="selectDemo('hypo/demo.html', this)">
+                                Hypothetical Performance
+                                <img src="assets/chevron.svg" alt="Logo" class="logo" />
+                            </button>
+                        </li>
+                        <li>
                             <button onclick="selectDemo('core-us-investment-style/demo.html', this)">
                                 Highcharts Core + Morningstar US Investment Style
                                 <img src="assets/chevron.svg" alt="Logo" class="logo" />
