feature/perf-trailing-returns-converter (#128)
* Added initial calendar year returns converter.

* Added hasMultiple to year returns converter.

* Added calendar year returns demo.

* Added tests for calendar year return converter.

* Restore demo.

* Requested changes.

* Added Trailing Returns Converter.

* Adjusted column names in paus trailing returns converter.

* Adjusted column names in calendar year returns converter.

* Corrected calendar year return demo column names.

* Corrected column names in trailing returns demo.

* Requested changes.

* Minor improvements.

* Revert hypo merge changes.

* Adjust demos titles.

* Adjusted performance test.

--- a/demos/core-us-trailing-returns/demo.html
+++ b/demos/core-us-trailing-returns/demo.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <script src="https://code.highcharts.com/highcharts.js"></script>
         <script src="https://code.highcharts.com/connectors/morningstar/connectors-morningstar.js"></script>
-        <title>Highcharts Core + Morningstar US Calendar Year Return</title>
+        <title>Highcharts Core + Morningstar US Trailing Returns</title>
         <style>
             body {
                 font-family: sans-serif;
