Adjust demos, set correct import paths, bump dash & grid.

--- a/demos/dashboards-find-similar-screener/demo.html
+++ b/demos/dashboards-find-similar-screener/demo.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="stylesheet" href="demo.css" />
-        <script src="https://code.highcharts.com/dashboards/datagrid.src.js"></script>
-        <script src="https://code.highcharts.com/dashboards/dashboards.src.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@highcharts/grid-pro/grid-pro.js"></script>
+        <script src="https://code.highcharts.com/dashboards/dashboards.js"></script>
         <script src="../../code/connectors-morningstar.src.js"></script>
 
         <title>Highcharts Dashboards + Morningstar Find Similar Screener</title>
