--- a/demos/dashboards-investor-preferences/demo.html
+++ b/demos/dashboards-investor-preferences/demo.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="stylesheet" href="demo.css" />
-        <script src="https://code.highcharts.com/dashboards/datagrid.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@highcharts/grid-pro/grid-pro.js"></script>
         <script src="https://code.highcharts.com/dashboards/dashboards.js"></script>
         <script src="../../code/connectors-morningstar.js"></script>
 
