--- a/demos/stock-securitydetails-asset-allocations/demo.html
+++ b/demos/stock-securitydetails-asset-allocations/demo.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <script src="https://code.highcharts.com/stock/highstock.src.js"></script>
+        <script src="https://code.highcharts.com/stock/highstock.js"></script>
         <script src="https://code.highcharts.com/connectors/morningstar/connectors-morningstar.src.js"></script>
         <title>Morningstar Security Details Asset Allocations</title>
         <style>
