POC Added AssetAllocationBreakdown.

--- a/demos/index.html
+++ b/demos/index.html
@@ -49,6 +49,12 @@
                     <h3>Demos</h3>
                     <ul>
                         <li>
+                            <button onclick="selectDemo('DWS-AssetAllocBreakdown/demo.html', this)" class="selected">
+                                DWS Asset Allocation Breakdown
+                                <img src="assets/chevron.svg" alt="Logo" class="logo" />
+                            </button>
+                        </li>
+                        <li>
                             <button onclick="selectDemo('WIP-investment-details/demo.html', this)" class="selected">
                                 WIP Investment Details
                                 <img src="assets/chevron.svg" alt="Logo" class="logo" />
