--- a/demos/WIP-investment-details/demo.html
+++ b/demos/WIP-investment-details/demo.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <script src="https://code.highcharts.com/highcharts.js"></script>
-        <script src="https://code.highcharts.com/connectors/morningstar/connectors-morningstar.js"></script>
-        <title>WIP Investment Details</title>
+        <script src="https://code.highcharts.com/connectors/morningstar/connectors-morningstar.src.js"></script>
+        <title>WIP Investments Connector</title>
         <style>
             body {
                 font-family: sans-serif;
@@ -18,7 +18,7 @@
         </style>
     </head>
     <body>
-        <h1>WIP Investment Details</h1>
+        <h1>WIP Investments Connector</h1>
         <p id="postman-message">
             Add your Postman environment file from Morningstar to start the demo:
             <input type="file" id="postman-json" accept=".json,application/json" />
