--- a/demos/DWS-AssetAllocBreakdown/demo.html
+++ b/demos/DWS-AssetAllocBreakdown/demo.html
@@ -28,6 +28,7 @@
         <div id="canada"></div>
         <div id="us"></div>
         <div id="nonus"></div>
+        <div id="underlying"></div>
         <script type="module" src="./demo.js"></script>
     </body>
 </html>
