--- a/demos/WIP-investment-details/demo.html
+++ b/demos/WIP-investment-details/demo.html
@@ -20,7 +20,7 @@
     <body>
         <h1>WIP Investments Connector</h1>
         <p id="postman-message">
-            Add your Postman environment file from Morningstar to start the demo:
+            Add your Postman environment file from Morningstar <b>DWS</b> to start the demo:
             <input type="file" id="postman-json" accept=".json,application/json" />
         </p>
         <p id="loading-label">Loading data…</p>
