--- a/demos/index.html
+++ b/demos/index.html
@@ -55,6 +55,18 @@
                             </button>
                         </li>
                         <li>
+                            <button onclick="selectDemo('dws-equity-sectors-breakdown/demo.html', this)" class="selected">
+                                [DWS] Equity Sectors Breakdown
+                                <img src="assets/chevron.svg" alt="Logo" class="logo" />
+                            </button>
+                        </li>
+                        <li>
+                            <button onclick="selectDemo('dws-fixed-income-sectors-breakdown/demo.html', this)" class="selected">
+                                [DWS] Fixed Income Sectors Breakdown
+                                <img src="assets/chevron.svg" alt="Logo" class="logo" />
+                            </button>
+                        </li>
+                        <li>
                             <button onclick="selectDemo('dashboards-rna-news/demo.html', this)" class="selected">
                                 Highcharts Dashboards + Morningstar RNA News
                                 <img src="assets/chevron.svg" alt="Logo" class="logo" />
