--- a/demos/dws-equity-sectors-breakdown/demo.html
+++ b/demos/dws-equity-sectors-breakdown/demo.html
@@ -24,7 +24,9 @@
             <input type="file" id="postman-json" accept=".json,application/json" />
         </p>
         <p id="loading-label">Loading data…</p>
-        <div id="container"></div>
+        <div id="container-super-sector"></div>
+        <div id="container-sector"></div>
+        <div id="container-industry"></div>
         <script type="module" src="./demo.js"></script>
     </body>
 </html>
