Corrected URLs in all demos and RegEx in Server.ts file.

--- a/demos/dashboards-regulatory-screener/demo.html
+++ b/demos/dashboards-regulatory-screener/demo.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="demo.css" />
         <script src="https://cdn.jsdelivr.net/npm/@highcharts/grid-pro/grid-pro.js"></script>
         <script src="https://code.highcharts.com/dashboards/dashboards.js"></script>
-        <script src="../../code/connectors-morningstar.src.js"></script>
+        <script src="https://code.highcharts.com/connectors/morningstar/connectors-morningstar.js"></script>
 
         <title>Highcharts Dashboards + Morningstar Regulatory Screener</title>
     </head>
