--- a/demos/morningstar-and-morningstar-dws/demo.html
+++ b/demos/morningstar-and-morningstar-dws/demo.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <script src="https://code.highcharts.com/highcharts.js"></script>
-        <script src="../../code/connectors-morningstar.src.js"></script>
-        <script src="../../code/connectors-morningstar-dws.src.js"></script>
+        <script src="https://code.highcharts.com/connectors/morningstar/connectors-morningstar.js"></script>
+        <script src="https://code.highcharts.com/connectors/morningstar/connectors-morningstar-dws.js"></script>
         <title>Morningstar and MorningstarDWS</title>
         <style>
             body {
