--- a/demos/stock-securitydetails-asset-allocations/demo.html
+++ b/demos/stock-securitydetails-asset-allocations/demo.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <script src="https://code.highcharts.com/stock/highstock.js"></script>
-        <script src="https://code.highcharts.com/connectors/morningstar/connectors-morningstar.src.js"></script>
+        <script src="https://code.highcharts.com/connectors/morningstar/connectors-morningstar.js"></script>
         <title>Morningstar Security Details Asset Allocations</title>
         <style>
             body {
