Corrected and optimized logic for getting fixed income data.

--- a/demos/dws-fixed-income-sectors-breakdown/demo.html
+++ b/demos/dws-fixed-income-sectors-breakdown/demo.html
@@ -24,9 +24,12 @@
             <input type="file" id="postman-json" accept=".json,application/json" />
         </p>
         <p id="loading-label">Loading data…</p>
-        <div id="container-super-sector"></div>
-        <div id="container-primary-sector"></div>
-        <div id="container-secondary-sector"></div>
+        <div id="container-brk-super-sectors"></div>
+        <div id="container-brk-primary-sectors"></div>
+        <div id="container-brk-secondary-sectors"></div>
+        <div id="container-super-sectors"></div>
+        <div id="container-primary-sectors"></div>
+        <div id="container-secondary-sectors"></div>
         <script type="module" src="./demo.js"></script>
     </body>
 </html>
