[Demos] Added support for multiple Postman environments at the same time. Closes #158.
* Added possibility to load both dist scripts and Postman envs at once.

* Small corrections for test and demo.

* Corrected URLs in all demos and RegEx in Server.ts file.

* Corrected both APIs test and demo.

--- a/demos/dws-equity-sectors-breakdown/demo.html
+++ b/demos/dws-equity-sectors-breakdown/demo.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <script src="https://code.highcharts.com/highcharts.js"></script>
-        <script src="https://code.highcharts.com/connectors/morningstar/connectors-morningstar-dws.src.js"></script>
+        <script src="https://code.highcharts.com/connectors/morningstar/connectors-morningstar-dws.js"></script>
         <title>Equity Sectors Breakdown</title>
         <style>
             body {
