--- a/demos/index.html
+++ b/demos/index.html
@@ -55,6 +55,12 @@
                             </button>
                         </li>
                         <li>
+                            <button onclick="selectDemo('morningstar-and-morningstar-dws/demo.html', this)">
+                                Morningstar and MorningstarDWS
+                                <img src="assets/chevron.svg" alt="Logo" class="logo" />
+                            </button>
+                        </li>
+                        <li>
                             <button onclick="selectDemo('dws-equity-sectors-breakdown/demo.html', this)">
                                 [DWS] Equity Sectors Breakdown
                                 <img src="assets/chevron.svg" alt="Logo" class="logo" />
