Removed unnecessary leftovers, cleanup.

--- a/demos/index.html
+++ b/demos/index.html
@@ -50,13 +50,7 @@
                     <ul>
                         <li>
                             <button onclick="selectDemo('DWS-AssetAllocBreakdown/demo.html', this)">
-                                DWS Asset Allocation Breakdown
-                                <img src="assets/chevron.svg" alt="Logo" class="logo" />
-                            </button>
-                        </li>
-                        <li>
-                            <button onclick="selectDemo('WIP-investment-details/demo.html', this)" class="selected">
-                                WIP Investment Details
+                                [DWS] Asset Allocation Breakdown
                                 <img src="assets/chevron.svg" alt="Logo" class="logo" />
                             </button>
                         </li>
