--- a/demos/DWS-AssetAllocBreakdown/demo.html
+++ b/demos/DWS-AssetAllocBreakdown/demo.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <script src="https://code.highcharts.com/highcharts.js"></script>
         <script src="../../code/connectors-morningstar-dws.src.js"></script>
-        <title>WIP Investment Details</title>
+        <title>Highcharts Core + Investment Details</title>
         <style>
             body {
                 font-family: sans-serif;
@@ -18,9 +18,9 @@
         </style>
     </head>
     <body>
-        <h1>WIP Investment Details</h1>
+        <h1>Highcharts Core + Investment Details</h1>
         <p id="postman-message">
-            Add your Postman environment file from Morningstar to start the demo:
+            Add your DWS Postman environment file from Morningstar to start the demo:
             <input type="file" id="postman-json" accept=".json,application/json" />
         </p>
         <p id="loading-label">Loading data…</p>
