Added Equity Style Box Converter for the new API.

--- a/demos/hypo/demo.html
+++ b/demos/hypo/demo.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <script src="https://code.highcharts.com/highcharts.js"></script>
         <script src="https://code.highcharts.com/connectors/morningstar/connectors-morningstar.js"></script>
-        <title>Highcharts Core + Hypothetical Performance</title>
+        <title>Highcharts Core + Morningstar Hypothetical Performance</title>
         <style>
             body {
                 font-family: sans-serif;
@@ -18,7 +18,7 @@
         </style>
     </head>
     <body>
-        <h1>Highcharts Core + Hypothetical Performance</h1>
+        <h1>Highcharts Core + Morningstar Hypothetical Performance</h1>
         <p id="postman-message">
             Add your Postman environment file from Morningstar to start the demo:
             <input type="file" id="postman-json" accept=".json,application/json" />
