--- a/demos/index.html
+++ b/demos/index.html
@@ -56,19 +56,31 @@
                         </li>
                         <li>
                             <button onclick="selectDemo('morningstar-and-morningstar-dws/demo.html', this)">
-                                Morningstar and MorningstarDWS
+                                Highcharts Core + Morningstar and MorningstarDWS
                                 <img src="assets/chevron.svg" alt="Logo" class="logo" />
                             </button>
                         </li>
                         <li>
                             <button onclick="selectDemo('dws-equity-sectors-breakdown/demo.html', this)">
-                                [DWS] Equity Sectors Breakdown
+                                [DWS] Highcharts Core + Morningstar Equity Sectors Breakdown
                                 <img src="assets/chevron.svg" alt="Logo" class="logo" />
                             </button>
                         </li>
                         <li>
                             <button onclick="selectDemo('dws-fixed-income-sectors-breakdown/demo.html', this)">
-                                [DWS] Fixed Income Sectors Breakdown
+                                [DWS] Highcharts Core + Morningstar Fixed Income Sectors Breakdown
+                                <img src="assets/chevron.svg" alt="Logo" class="logo" />
+                            </button>
+                        </li>
+                        <li>
+                            <button onclick="selectDemo('dws-equity-style-box/demo.html', this)">
+                                [DWS] Highcharts Core + Morningstar Equity Style Box
+                                <img src="assets/chevron.svg" alt="Logo" class="logo" />
+                            </button>
+                        </li>
+                        <li>
+                            <button onclick="selectDemo('dws-equity-style-box-time-series/demo.html', this)">
+                                [DWS] Highcharts Core + Morningstar Equity Style Box Time Series
                                 <img src="assets/chevron.svg" alt="Logo" class="logo" />
                             </button>
                         </li>
@@ -110,7 +122,7 @@
                         </li>
                         <li>
                             <button onclick="selectDemo('dashboards-risk-score/demo.html', this)">
-                                Highcharts Dashboards + Morningstar Risk Score
+                                Highcharts Dashboards + Morningstar Risk Score (Portfolio)
                                 <img src="assets/chevron.svg" alt="Logo" class="logo" />
                             </button>
                         </li>
@@ -128,19 +140,19 @@
                         </li>
                         <li>
                             <button onclick="selectDemo('stock-timeseries/demo.html', this)">
-                                Highcharts Stock + Morningstar TimeSeries
+                                Highcharts Stock + Morningstar Time Series
                                 <img src="assets/chevron.svg" alt="Logo" class="logo" />
                             </button>
                         </li>
                         <li>
                             <button onclick="selectDemo('stock-timeseries-rolling-return/demo.html', this)">
-                                Highcharts Stock + Morningstar Rolling Return
+                                Highcharts Stock + Morningstar Time Series Rolling Return
                                 <img src="assets/chevron.svg" alt="Logo" class="logo" />
                             </button>
                         </li>
                         <li>
                             <button onclick="selectDemo('stock-ohlcv/demo.html', this)">
-                                Highcharts Stock + Morningstar OHLCV TimeSeries
+                                Highcharts Stock + Morningstar OHLCV Time Series
                                 <img src="assets/chevron.svg" alt="Logo" class="logo" />
                             </button>
                         </li>
@@ -152,19 +164,19 @@
                         </li>
                         <li>
                             <button onclick="selectDemo('stock-securitydetails-asset-allocations/demo.html', this)">
-                                Morningstar Security Details Asset Allocations
+                                Highcharts Core + Morningstar Security Details Asset Allocations
                                 <img src="assets/chevron.svg" alt="Logo" class="logo" />
                             </button>
                         </li>
                         <li>
                             <button onclick="selectDemo('manual-fetch/demo.html', this)">
-                                Manual Fetch
+                                Highcharts Stock + Morningstar Time Series Manual Fetch
                                 <img src="assets/chevron.svg" alt="Logo" class="logo" />
                             </button>
                         </li>
                         <li>
                             <button onclick="selectDemo('stock-security-compare/demo.html', this)">
-                                Security Compare
+                                Highcharts Stock + Morningstar Security Compare
                                 <img src="assets/chevron.svg" alt="Logo" class="logo" />
                             </button>
                         </li>
@@ -182,7 +194,7 @@
                         </li>
                         <li>
                             <button onclick="selectDemo('hypo/demo.html', this)">
-                                Hypothetical Performance
+                                Highcharts Core + Morningstar Hypothetical Performance
                                 <img src="assets/chevron.svg" alt="Logo" class="logo" />
                             </button>
                         </li>
