--- a/demos/morningstar-and-morningstar-dws/demo.html
+++ b/demos/morningstar-and-morningstar-dws/demo.html
@@ -5,7 +5,7 @@
         <script src="https://code.highcharts.com/highcharts.js"></script>
         <script src="https://code.highcharts.com/connectors/morningstar/connectors-morningstar.js"></script>
         <script src="https://code.highcharts.com/connectors/morningstar/connectors-morningstar-dws.js"></script>
-        <title>Morningstar and MorningstarDWS</title>
+        <title>Highcharts Core + Morningstar and MorningstarDWS</title>
         <style>
             body {
                 font-family: sans-serif;
@@ -19,7 +19,7 @@
         </style>
     </head>
     <body>
-        <h1>Morningstar and MorningstarDWS</h1>
+        <h1>Highcharts Core + Morningstar and MorningstarDWS</h1>
         <p id="postman-message">
             Add your <b>both</b> Postman environment files from <b>Morningstar</b> and <b>Morningstar DWS</b> to start the demo:
             <input type="file" id="postman-json" accept=".json,application/json" multiple />
