--- a/demos/core-us-calendar-year-return/demo.html
+++ b/demos/core-us-calendar-year-return/demo.html
@@ -18,7 +18,7 @@
         </style>
     </head>
     <body>
-        <h1>Portfolio Performance Trailing Returns</h1>
+        <h1>Highcharts Core + Morningstar US Calendar Year Return</h1>
         <p id="postman-message">
             Add your Postman environment file from Morningstar to start the demo:
             <input type="file" id="postman-json" accept=".json,application/json" />
