--- a/demos/dws-equity-sectors-breakdown/demo.html
+++ b/demos/dws-equity-sectors-breakdown/demo.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <script src="https://code.highcharts.com/highcharts.js"></script>
         <script src="https://code.highcharts.com/connectors/morningstar/connectors-morningstar-dws.js"></script>
-        <title>Equity Sectors Breakdown</title>
+        <title>Highcharts Core + Morningstar Equity Sectors Breakdown</title>
         <style>
             body {
                 font-family: sans-serif;
@@ -18,7 +18,7 @@
         </style>
     </head>
     <body>
-        <h1>Equity Sectors Breakdown</h1>
+        <h1>Highcharts Core + Morningstar Equity Sectors Breakdown</h1>
         <p id="postman-message">
             Add your Postman environment file from Morningstar <b>DWS</b> to start the demo:
             <input type="file" id="postman-json" accept=".json,application/json" />
