--- a/demos/dws-equity-style-box-time-series/demo.html
+++ b/demos/dws-equity-style-box-time-series/demo.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <script src="https://code.highcharts.com/highcharts.js"></script>
+        <script src="https://code.highcharts.com/stock/highstock.js"></script>
         <script src="https://code.highcharts.com/connectors/morningstar/connectors-morningstar-dws.js"></script>
-        <title>Highcharts Core + Morningstar Fixed Income Sectors Breakdown</title>
+        <title>Highcharts Core + Morningstar Equity Style Box Time Series</title>
         <style>
             body {
                 font-family: sans-serif;
@@ -18,18 +18,13 @@
         </style>
     </head>
     <body>
-        <h1>Highcharts Core + Morningstar Fixed Income Sectors Breakdown</h1>
+        <h1>Highcharts Core + Morningstar Equity Style Box Time Series</h1>
         <p id="postman-message">
             Add your Postman environment file from Morningstar <b>DWS</b> to start the demo:
             <input type="file" id="postman-json" accept=".json,application/json" />
         </p>
         <p id="loading-label">Loading data…</p>
-        <div id="container-brk-super-sectors"></div>
-        <div id="container-brk-primary-sectors"></div>
-        <div id="container-brk-secondary-sectors"></div>
-        <div id="container-super-sectors"></div>
-        <div id="container-primary-sectors"></div>
-        <div id="container-secondary-sectors"></div>
+        <div id="container"></div>
         <script type="module" src="./demo.js"></script>
     </body>
 </html>
