--- a/demos/manual-fetch/demo.html
+++ b/demos/manual-fetch/demo.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <script src="https://code.highcharts.com/stock/highstock.js"></script>
-        <title>Highcharts Stock + Morningstar TimeSeries</title>
+        <title>Highcharts Stock + Morningstar Time Series Manual Fetch</title>
         <style>
             body {
                 font-family: sans-serif;
@@ -11,7 +11,7 @@
         </style>
     </head>
     <body>
-        <h1>Highcharts Stock + Morningstar TimeSeries</h1>
+        <h1>Highcharts Stock + Morningstar Time Series Manual Fetch</h1>
         <p>
             Add your Postman environment file from Morningstar to start the demo:
             <input type="file" id="postman-json" accept=".json,application/json" />
