--- a/demos/stock-timeseries-rolling-return/demo.html
+++ b/demos/stock-timeseries-rolling-return/demo.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <script src="https://code.highcharts.com/stock/highstock.js"></script>
         <script src="https://code.highcharts.com/connectors/morningstar/connectors-morningstar.js"></script>
-        <title>Highcharts Stock + Morningstar TimeSeries</title>
+        <title>Highcharts Stock + Morningstar Time Series Rolling Return</title>
         <style>
             body {
                 font-family: sans-serif;
@@ -18,7 +18,7 @@
         </style>
     </head>
     <body>
-        <h1>Highcharts Stock + Morningstar Rolling Return</h1>
+        <h1>Highcharts Stock + Morningstar Time Series Rolling Return</h1>
         <p id="postman-message">
             Add your Postman environment file from Morningstar to start the demo:
             <input type="file" id="postman-json" accept=".json,application/json" />
