Cosmetic changes to code, demo titles.

--- a/demos/index.html
+++ b/demos/index.html
@@ -50,7 +50,7 @@
                     <ul>
                         <li>
                             <button onclick="selectDemo('dws-asset-alloc-breakdown/demo.html', this)">
-                                [DWS] Asset Allocation Breakdown
+                                [DWS] Highcharts Core + Morningstar Asset Allocation Breakdown
                                 <img src="assets/chevron.svg" alt="Logo" class="logo" />
                             </button>
                         </li>
