Reviews corrections and more.

--- a/demos/dws-equity-style-box-time-series/demo.html
+++ b/demos/dws-equity-style-box-time-series/demo.html
@@ -2,23 +2,14 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <script src="https://code.highcharts.com/stock/highstock.js"></script>
+        <link rel="stylesheet" href="demo.css" />
+        <script src="https://cdn.jsdelivr.net/npm/@highcharts/grid-pro/grid-pro.js"></script>
+        <script src="https://code.highcharts.com/dashboards/dashboards.js"></script>
         <script src="https://code.highcharts.com/connectors/morningstar/connectors-morningstar-dws.js"></script>
-        <title>Highcharts Core + Morningstar Equity Style Box Time Series</title>
-        <style>
-            body {
-                font-family: sans-serif;
-            }
-            #postman-message {
-                display: none;
-            }
-            #loading-label {
-                display: none;
-            }
-        </style>
+        <title>Highcharts Dashboards DataGrid + Morningstar Equity Style Box Time Series</title>
     </head>
     <body>
-        <h1>Highcharts Core + Morningstar Equity Style Box Time Series</h1>
+        <h1>Highcharts Dashboards DataGrid + Morningstar Equity Style Box Time Series</h1>
         <p id="postman-message">
             Add your Postman environment file from Morningstar <b>DWS</b> to start the demo:
             <input type="file" id="postman-json" accept=".json,application/json" />
