--- a/demos/dashboards-risk-score/demo.html
+++ b/demos/dashboards-risk-score/demo.html
@@ -7,10 +7,10 @@
         <script src="https://code.highcharts.com/highcharts.js"></script>
         <script src="https://code.highcharts.com/dashboards/dashboards.js"></script>
         <script src="https://code.highcharts.com/connectors/morningstar/connectors-morningstar.js"></script>
-        <title>Highcharts Dashboards + Morningstar Risk Score</title>
+        <title>Highcharts Dashboards + Morningstar Portfolio Risk Score</title>
     </head>
     <body>
-        <h1>Highcharts Dashboards + Morningstar Risk Score</h1>
+        <h1>Highcharts Dashboards + Morningstar Portfolio Risk Score</h1>
         <p id="postman-message">
             Add your Postman environment file from Morningstar to start the demo:
             <input type="file" id="postman-json" accept=".json,application/json" />
