feature/asset-alloc-converter (#155)
* Added InvestmentDetails connector.

* Adjust classes to new scheme.

* Changed langcult to languageId.

* Added support for both new and old credentials.

* Added new env variables for GH actions.

* Added requested changes.

* POC Added AssetAllocationBreakdown.

* Added one shared connector with multiple requests support.

* Change json type to unknown.

* Moved files to new index-dws.

* Separate datatables, added underlying instruments.

* Change url in demo.html

* Added shorts, and 0 vals.

* Added requested changes.

* Fixed tests.

* Different API postman environments' support added to demos. (#157)

* Added two postman environments handler.

* Added requested changes, changed console.log to throwing errors.

---------

Co-authored-by: Paweł Fus <pawel.fus.88@gmail.com>

* More requested changes.

* Add index file for InvestmentsConnector.

* Export path correction.

* Added support for multiple data tables from one converter.

* Adapt to connecter changes.

* Clean up redundant prefixes, and demo.

* Added tests.

* Replaced MockAssetAlloc with real AssetAlloc.

* Removed unnecessary leftovers, cleanup.

* Demo cleanup.

* Merge cleanup and adaption.

* Removed redundant test.

* Func name change, using import types instead.

* Cosmetic changes to code, demo titles.

---------

Co-authored-by: Kamil Musiałowski <kamil.musialowski@blacklabel.net>
Co-authored-by: Kamil Musiałowski <105275628+kamil-musialowski@users.noreply.github.com>
Co-authored-by: Paweł Fus <pawel.fus.88@gmail.com>

--- a/demos/index.html
+++ b/demos/index.html
@@ -49,8 +49,8 @@
                     <h3>Demos</h3>
                     <ul>
                         <li>
-                            <button onclick="selectDemo('WIP-investment-details/demo.html', this)">
-                                WIP Investment Details
+                            <button onclick="selectDemo('dws-asset-alloc-breakdown/demo.html', this)">
+                                [DWS] Highcharts Core + Morningstar Asset Allocation Breakdown
                                 <img src="assets/chevron.svg" alt="Logo" class="logo" />
                             </button>
                         </li>
