--- a/demos/dws-asset-alloc-breakdown/demo.html
+++ b/demos/dws-asset-alloc-breakdown/demo.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <script src="https://code.highcharts.com/highcharts.js"></script>
         <script src="https://code.highcharts.com/connectors/morningstar/connectors-morningstar-dws.js"></script>
-        <title>WIP Investments Connector</title>
+        <title>Highcharts Core + Morningstar Asset Allocation Breakdown</title>
         <style>
             body {
                 font-family: sans-serif;
@@ -18,13 +18,17 @@
         </style>
     </head>
     <body>
-        <h1>WIP Investments Connector</h1>
+        <h1>Highcharts Core + Morningstar Asset Allocation Breakdown</h1>
         <p id="postman-message">
             Add your Postman environment file from Morningstar <b>DWS</b> to start the demo:
             <input type="file" id="postman-json" accept=".json,application/json" />
         </p>
         <p id="loading-label">Loading data…</p>
-        <div id="container"></div>
+        <div id="general"></div>
+        <div id="canada"></div>
+        <div id="us"></div>
+        <div id="nonus"></div>
+        <div id="underlying"></div>
         <script type="module" src="./demo.js"></script>
     </body>
 </html>
