--- a/demos/dws-equity-style-box-time-series/demo.html
+++ b/demos/dws-equity-style-box-time-series/demo.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="stylesheet" href="demo.css" />
+        <script src="https://code.highcharts.com/highcharts.js"></script>
+        <script src="https://code.highcharts.com/modules/heatmap.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@highcharts/grid-pro/grid-pro.js"></script>
         <script src="https://code.highcharts.com/dashboards/dashboards.js"></script>
         <script src="https://code.highcharts.com/connectors/morningstar/connectors-morningstar-dws.js"></script>
