Added docs + demo.

--- a/demos/index.html
+++ b/demos/index.html
@@ -61,6 +61,12 @@
                             </button>
                         </li>
                         <li>
+                            <button onclick="selectDemo('dws-country-and-region-exposure/demo.html', this)">
+                                [DWS] Highcharts Core + Morningstar Country and Region Exposure
+                                <img src="assets/chevron.svg" alt="Logo" class="logo" />
+                            </button>
+                        </li>
+                        <li>
                             <button onclick="selectDemo('dws-equity-sectors-breakdown/demo.html', this)">
                                 [DWS] Highcharts Core + Morningstar Equity Sectors Breakdown
                                 <img src="assets/chevron.svg" alt="Logo" class="logo" />
