--- a/demos/index.html
+++ b/demos/index.html
@@ -91,6 +91,12 @@
                             </button>
                         </li>
                         <li>
+                            <button onclick="selectDemo('dws-stock-timeseries/demo.html', this)">
+                                [DWS] Highcharts Stock + Morningstar Time Series
+                                <img src="assets/chevron.svg" alt="Logo" class="logo" />
+                            </button>
+                        </li>
+                        <li>
                             <button onclick="selectDemo('dashboards-rna-news/demo.html', this)" class="selected">
                                 Highcharts Dashboards + Morningstar RNA News
                                 <img src="assets/chevron.svg" alt="Logo" class="logo" />
