Added requested changes.

--- a/demos/index.html
+++ b/demos/index.html
@@ -92,7 +92,7 @@
                         </li>
                         <li>
                             <button onclick="selectDemo('dws-prospectus-fees/demo.html', this)">
-                                [DWS] Highcharts Grid + Morningstar Prospectus Fees
+                                [DWS] Highcharts Dashboards DataGrid + Morningstar Prospectus Fees
                                 <img src="assets/chevron.svg" alt="Logo" class="logo" />
                             </button>
                         </li>
