--- a/demos/dws-prospectus-fees/demo.html
+++ b/demos/dws-prospectus-fees/demo.html
@@ -6,11 +6,11 @@
         <script src="https://cdn.jsdelivr.net/npm/@highcharts/grid-pro/grid-pro.js"></script>
         <script src="https://code.highcharts.com/dashboards/dashboards.js"></script>
         <script src="https://code.highcharts.com/connectors/morningstar/connectors-morningstar-dws.js"></script>
-        <title>Highcharts Grid + Morningstar Prospectus Fees data</title>
+        <title>Highcharts Dashboards DataGrid + Morningstar Prospectus Fees data</title>
 
     </head>
     <body>
-        <h1>Highcharts Grid + Morningstar Prospectus Fees data</h1>
+        <h1>Highcharts Dashboards DataGrid + Morningstar Prospectus Fees data</h1>
         <p id="postman-message">
             Add your Postman environment file from Morningstar <b>DWS</b> to start the demo:
             <input type="file" id="postman-json" accept=".json,application/json" />
