--- a/demos/dws-stock-timeseries/demo.html
+++ b/demos/dws-stock-timeseries/demo.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <script src="https://code.highcharts.com/stock/highstock.js"></script>
         <script src="https://code.highcharts.com/connectors/morningstar/connectors-morningstar-dws.js"></script>
-        <title>Highcharts Stock + Morningstar DWS Time Series</title>
+        <title>Highcharts Stock + Morningstar Time Series</title>
         <style>
             body {
                 font-family: sans-serif;
@@ -18,7 +18,7 @@
         </style>
     </head>
     <body>
-        <h1>Highcharts Stock + Morningstar DWS Time Series</h1>
+        <h1>Highcharts Stock + Morningstar Time Series</h1>
         <p id="postman-message">
              Add your Postman environment file from Morningstar <b>DWS</b> to start the demo:
             <input type="file" id="postman-json" accept=".json,application/json" />
