Added Equity Residual Risk Converters for the new API.

--- a/demos/index.html
+++ b/demos/index.html
@@ -67,6 +67,18 @@
                             </button>
                         </li>
                         <li>
+                            <button onclick="selectDemo('dws-equity-aggregates-residual-risk/demo.html', this)">
+                                [DWS] Highcharts Core + Morningstar Equity Aggregates Residual Risk
+                                <img src="assets/chevron.svg" alt="Logo" class="logo" />
+                            </button>
+                        </li>
+                        <li>
+                            <button onclick="selectDemo('dws-equity-residual-risk/demo.html', this)">
+                                [DWS] Highcharts Core + Morningstar Equity Residual Risk
+                                <img src="assets/chevron.svg" alt="Logo" class="logo" />
+                            </button>
+                        </li>
+                        <li>
                             <button onclick="selectDemo('dws-equity-sectors-breakdown/demo.html', this)">
                                 [DWS] Highcharts Core + Morningstar Equity Sectors Breakdown
                                 <img src="assets/chevron.svg" alt="Logo" class="logo" />
