Added DWS Prospectus Fees converter. (#166)
* Added ProspectusFees converter + test and docs.

* Added demo.

* Change year.

* Correct postman env.

* Added requested changes.

---------

Co-authored-by: Paweł Fus <pawel.fus.88@gmail.com>

--- a/demos/index.html
+++ b/demos/index.html
@@ -91,6 +91,12 @@
                             </button>
                         </li>
                         <li>
+                            <button onclick="selectDemo('dws-prospectus-fees/demo.html', this)">
+                                [DWS] Highcharts Dashboards DataGrid + Morningstar Prospectus Fees
+                                <img src="assets/chevron.svg" alt="Logo" class="logo" />
+                            </button>
+                        </li>
+                        <li>
                             <button onclick="selectDemo('dashboards-rna-news/demo.html', this)" class="selected">
                                 Highcharts Dashboards + Morningstar RNA News
                                 <img src="assets/chevron.svg" alt="Logo" class="logo" />
