--- a/demos/dws-equity-residual-risk/demo.html
+++ b/demos/dws-equity-residual-risk/demo.html
@@ -24,8 +24,16 @@
             <input type="file" id="postman-json" accept=".json,application/json" />
         </p>
         <p id="loading-label">Loading data…</p>
-        <div id="container-daily"></div>
-        <div id="container-monthly"></div>
+        <div style="display: flex; justify-content: space-between;">
+            <div id="container-daily-alpha" style="width: 33%; height: 350px;"></div>
+            <div id="container-daily-beta" style="width: 33%; height: 350px;"></div>
+            <div id="container-daily-rsquare" style="width: 33%; height: 350px;"></div>
+        </div>
+        <div style="display: flex; justify-content: space-between;">
+            <div id="container-monthly-alpha" style="width: 33%; height: 350px;"></div>
+            <div id="container-monthly-beta" style="width: 33%; height: 350px;"></div>
+            <div id="container-monthly-rsquare" style="width: 33%; height: 350px;"></div>
+        </div>
         <script type="module" src="./demo.js"></script>
     </body>
 </html>
